.apex/unpackaged/objects/redwing__Learning_Category_Profile__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Catalog_Training_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this option if you want to enable all Learning Activities associated to this Catalog for the specified Profile</inlineHelpText>
        <label>Enable Catalog Learning Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Catalog_Training_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this option if you want to enable all Learning Plans associated to this Catalog for the specified Profile</inlineHelpText>
        <label>Enable Catalog Learning Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Catalog_Training_Tracks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this option if you want to enable all Learning Tracs associated to this Catalog for the specified Profile</inlineHelpText>
        <label>Enable Catalog Learning Tracs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog</label>
        <referenceTo>redwing__Learning_Category__c</referenceTo>
        <relationshipLabel>Catalog Profiles</relationshipLabel>
        <relationshipName>Learning_Category_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Catalog Profile</label>
    <nameField>
        <displayFormat>CAP-{0000000}</displayFormat>
        <label>Catalog Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>